# book-task

./: .env  .gitignore  API_docs.md  README.md  app.py  database.db  main.py  pyproject.toml  pytest.ini  test_db.db
book_task/database/: db_connection.py  db_init.py  schema.sql
book_task/flask_app/: main_app.py
book_task/routes/: book.py  campaigns.py  client.py  partners.py
documentation/: books.md  campaign.md  campaign_logs.md  clients.md  partner.md
pytest/fast_api/: conftest.py  test_books_routes.py  test_campaign_routes.py  test_clients_routes.py  test_routes.py
pytest/flask_app/: conftest.py  test_routes.py
tests/fast_api/: conftest.py  test_books_routes.py  test_campaign_routes.py  test_clients_routes.py  test_partner_routes.py
